# realm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RUNTIME_PLUGIN_ARCHITECTURE.md  build.rs  install.sh  realm  release_notes.md
.github/workflows/: ci.yml  release.yml
commands/: __activate.sh  __init.sh
docs/: advanced.md  commands.md  concepts.md  configuration.md  custom-runtimes.md  deployment.md  getting-started.md  index.md  installation.md  processes.md  proxy.md  quickstart.md  realm.yml.5  runtimes.md  templates.md  troubleshooting.md
docs/man/: realm-bundle.1  realm-init.1  realm-proxy.1  realm-start.1  realm-stop.1  realm-templates.1  realm.1
examples/: README.md
examples/basic/: package.json  server.js
examples/fullstack/backend/: package.json  server.js
examples/fullstack/frontend/: index.html  package.json  server.js
libexec/: realm
libexec/commands/: __check.sh  __init.sh
libexec/envs/: __db.sh  __direnv.sh  __flutter.sh  __go.sh  __lua.sh  __node.sh  __rust.sh
libexec/stack/: alias.sh  functions.sh  hooks.sh  paths.sh
libs/: __heredoc.sh
runtimes/: CONTRIBUTING.md  README.md  bun.yaml  deno.yaml  go.yaml  node.yaml  python.yaml  ripgrep.yaml  zig.yaml
scripts/: bump.sh
src/: errors.rs  lib.rs  main.rs
src/activation/: environment.rs  mod.rs
src/bundle/: bundler.rs  mod.rs
src/cache/: manager.rs  mod.rs
src/cli/: mod.rs
src/config/: config.rs  mod.rs  process.rs  realm.rs
src/env/: manager.rs  mod.rs
src/mount/: mod.rs
src/process/: info.rs  manager.rs  mod.rs
src/proxy/: mod.rs  server.rs
src/runtime/: declarative.rs  manager.rs  manifest.rs  mod.rs  provider.rs  registry.rs  runtime.rs  types.rs
src/templates/: manager.rs  manifest.rs  mod.rs  template.rs
src/templates/builtin/: fastapi.rs  mod.rs  nextjs.rs  react.rs  svelte.rs  vue.rs
templates/: README.md
templates/nextjs/: .gitignore  README.md  package.json  template.yaml
templates/nextjs/app/: page.tsx
templates/nextjs/app/api/health/: route.ts
templates/react-express/: .gitignore  README.md  template.yaml
templates/react-express/backend/: package.json  server.ts
templates/react-express/frontend/: index.html  package.json
templates/react-express/frontend/src/: App.css  App.jsx
templates/react-fastapi/: .gitignore  README.md  template.yaml
templates/react-fastapi/backend/: main.py
templates/react-fastapi/frontend/: index.html  package.json
templates/react-fastapi/frontend/src/: App.css  App.jsx  index.css
templates/svelte-fastify/: .gitignore  README.md  template.yaml
templates/svelte-fastify/backend/: package.json  server.ts
templates/svelte-fastify/frontend/: package.json  vite.config.js
templates/vue-express/: README.md  template.yaml
templates/vue-express/backend/: package.json  server.js
templates/vue-express/frontend/: index.html  package.json  vite.config.js
templates/vue-express/frontend/src/: App.vue
tests/: cache_tests.rs  config_tests.rs  env_tests.rs  integration_tests.rs  process_tests.rs  runtime_tests.rs
(+1 files in other folders)
