[package]
name = "realmenv"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Zero-config development environment with isolated runtimes, process management, and intelligent HTTP proxy"
authors = ["Wess Cope <wess@frenzylabs.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/wess/realm"
repository = "https://github.com/wess/realm"
documentation = "https://docs.rs/realm"
keywords = ["development", "environment", "proxy", "process-manager", "cli"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
exclude = [
    ".github/",
    "tests/",
    "docs/",
    "scripts/",
    "*.md",
    "!README.md",
    "!CHANGELOG.md",
    "!LICENSE"
]

[[bin]]
name = "realm"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "client-legacy", "http1"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dirs = "5.0"
flate2 = "1.0"
tar = "0.4"
dotenv = "0.15"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
