[package]
name = "realmenv"
version = "1.2.0"
edition = "2021"
rust-version = "1.75"
description = "Zero-config development environment with isolated runtimes, process management, and intelligent HTTP proxy"
authors = ["Wess Cope <wess@frenzylabs.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/wess/realm"
repository = "https://github.com/wess/realm"
documentation = "https://github.com/wess/realm#readme"
keywords = ["development", "environment", "proxy", "process-manager", "cli"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
exclude = [
    ".github/",
    "tests/",
    "docs/",
    "scripts/",
    "*.md",
    "!README.md",
    "!CHANGELOG.md",
    "!LICENSE"
]

[lib]
name = "realm"
path = "src/lib.rs"

[[bin]]
name = "realm"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "client-legacy", "http1"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.5"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "stream"] }
dirs = "5.0"
flate2 = "1.0"
tar = "0.4"
dotenv = "0.15"
url = "2.4"
bytes = "1.5"
indicatif = "0.17"
colored = "2.1"
futures-util = "0.3"
inquire = "0.7"
include_dir = "0.7"
tera = "1.19"
async-trait = "0.1"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
